# QInput

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.b31da7d  Keyboard-Cropped.xcf  LayerCoordinates.py  README.md  gimp.py  layer-map.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp  test_hook
include/: CMakeLists.txt  hook.h  mainwindow.h
lib/: libuiohook.so.1.2.0
resources/Layout/: LayerCoordinates.py  layer-map.txt
src/: hook.cpp  logger.c  logger.h  main.cpp  mainwindow.cpp
src/.qt/: QtDeploySupport.cmake
src/resources/: QInput.rc
src/resources/Layout/: Keyboard-Cropped.xcf
src/windows/: input_helper.c  input_hook.c  post_event.c  system_properties.c
src/x11/: input_helper.c  input_hook.c  post_event.c  system_properties.c
